# nn-tomo-reconstruction

./: .gitignore  LICENSE.txt  MANIFEST.in  README.rst  requirements.txt  setup.cfg
docs/source/: conf.py  index.rst  modules.rst  nntomo.custom_interp.rst  nntomo.dataset_slices.rst  nntomo.msdnet.rst  nntomo.network.rst  nntomo.nnfbp.rst  nntomo.projection_stack.rst  nntomo.rst  nntomo.utilities.rst  nntomo.volume.rst
scripts/: atomic_reconstruction.ipynb  how_to_edit_library.ipynb  main.ipynb  make_gif.ipynb  network_comparison.ipynb  particule_reconstruction.ipynb  tutorial_classes.ipynb  uio67-reconstruction.ipynb
src/nntomo/: __init__.py  custom_interp.py  dataset_slices.py  msdnet.py  network.py  nnfbp.py  projection_stack.py  utilities.py  volume.py
