[metadata]
name = nn_tomo_reconstruction
version = 0.1.0
license = MIT
description = Tools to do tomographic reconstruction using neural networks.
long_description = file: README.rst
author = Alix Branchut
author_email = alix.branchut@outlook.fr
classifiers=
   Development Status :: 3 - Alpha
   Environment :: GPU :: NVIDIA CUDA
   Natural Language :: English
   Operating System :: Microsoft :: Windows
   Programming Language :: Python

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
   cupy
   torch
   mrcfile
   tifffile
   ase
   abtem
   astra-toolbox

[options.packages.find]
where=src